<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AutoHostsActivity!</string>
    <string name="app_name">AutoHosts</string>
    <string name="current_ver">Current Hosts Version on server: </string>
    <string name="host_pulled">hosts Retrieved!</string>
    <string name="btn_setHosts">Set\nhosts</string>
    <string name="btn_getHosts">Get\nhosts</string>
    <string name="dialog_title_load">Please standby...</string>
    <string name="dialog_txt_load">Now retrieving hosts.</string>
    <string name="errorDownloading">Error downloading hosts</string>
    <string name="errorPrefix">Error</string>
    <string name="err_no_root">Error: Cannot get ROOT</string>
    <string name="host_success">hosts successfully relaced.</string>
    <string name="label_updating">Update in Progress...</string>
    <string name="btn_revertHosts">Revert Hosts</string>
    <string name="label_reverting">Revert in Progress...</string>
    <string name="fix_dns">Fix DNS</string>
    <string name="label_fixingDNS">Fixing DNS...</string>
    <string name="add_hosts_entry">Add Hosts Entry</string>
    <string name="add_hosts_source">Add Hosts Source</string>
    <string name="addingHostsToFile">Adding Hosts Entry to File...</string>
    <string name="label_backingup">Backing up existing entries...</string>
    <string name="label_loadingFile">Loading Hosts File...</string>
    <string name="label_deleteDownloadedFiles">Deleting downloaded file...</string>
    <string name="label_deletingBackupFiles">Deleting backup files...</string>
    <string name="about">About</string>
    <string name="dialog_dns">This DNS setting can affect DNS in the CURRENT NETWORK SESSION (including 3G and WiFi),
        you may need to set DNS again once this network session no longer exists.
    </string>
    <string name="dialog_about"><b>AutoHosts</b>\nVersion 1.0.3\n\nby ss1271\n\nFollow me @ss1271 on Twitter\n\nThis
        software is developed under GPLv3.
    </string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title_append">Add hosts Item</string>
    <string name="append_success">Success!</string>
    <string name="revert_blank">Revert to Blank hosts</string>

</resources>